; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/alpine-hal/extr_al_hal_pcie.c_al_pcie_local_cfg_space_read.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/alpine-hal/extr_al_hal_pcie.c_al_pcie_local_cfg_space_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.al_pcie_pf = type { i64, %struct.TYPE_3__* }
%struct.TYPE_3__ = type { %struct.al_pcie_regs* }
%struct.al_pcie_regs = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @al_pcie_local_cfg_space_read(%struct.al_pcie_pf* %0, i32 %1) #0 {
  %3 = alloca %struct.al_pcie_pf*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.al_pcie_regs*, align 8
  %6 = alloca i32, align 4
  store %struct.al_pcie_pf* %0, %struct.al_pcie_pf** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.al_pcie_pf*, %struct.al_pcie_pf** %3, align 8
  %8 = getelementptr inbounds %struct.al_pcie_pf, %struct.al_pcie_pf* %7, i32 0, i32 1
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load %struct.al_pcie_regs*, %struct.al_pcie_regs** %10, align 8
  store %struct.al_pcie_regs* %11, %struct.al_pcie_regs** %5, align 8
  %12 = load %struct.al_pcie_regs*, %struct.al_pcie_regs** %5, align 8
  %13 = getelementptr inbounds %struct.al_pcie_regs, %struct.al_pcie_regs* %12, i32 0, i32 0
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %13, align 8
  %15 = load %struct.al_pcie_pf*, %struct.al_pcie_pf** %3, align 8
  %16 = getelementptr inbounds %struct.al_pcie_pf, %struct.al_pcie_pf* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i64 %17
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  %20 = load i32*, i32** %19, align 8
  %21 = load i32, i32* %4, align 4
  %22 = zext i32 %21 to i64
  %23 = getelementptr inbounds i32, i32* %20, i64 %22
  %24 = call i32 @al_reg_read32(i32* %23)
  store i32 %24, i32* %6, align 4
  %25 = load i32, i32* %6, align 4
  ret i32 %25
}

declare dso_local i32 @al_reg_read32(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
